--- a/app/src/main/res/layout/fragment_comparacion_i.xml
+++ b/app/src/main/res/layout/fragment_comparacion_i.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:textSize="20dp"
-        android:text="97 -------------------- 83"
+        android:text="72 -------------------- 98"
 
 
 
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text=">"
+            android:text="<"
             android:gravity="center"
             android:textSize="50dp"/>
 
