--- a/app/src/main/res/layout/fragment_comparacion_i.xml
+++ b/app/src/main/res/layout/fragment_comparacion_i.xml
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="<"
+            android:text="&gt;"
             android:gravity="center"
             android:textSize="50dp"/>
 
