--- a/app/src/main/res/layout/fragment_comparaciones_i.xml
+++ b/app/src/main/res/layout/fragment_comparaciones_i.xml
@@ -152,7 +152,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
 
-                android:text="Ayudanos a ordenar las cantidades mayor a menor"
+                android:text="Ayudanos a ordenar las cantidades de mayor a menor"
 
                 android:layout_marginTop="10dp"
                 android:textColor="#255CE6"
