--- a/app/src/main/res/layout/fragment_decenas_hard_i.xml
+++ b/app/src/main/res/layout/fragment_decenas_hard_i.xml
@@ -29,11 +29,10 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Pesos"
-                android:gravity="center"
+                android:text="Unidades y decenas"
                 android:textSize="28dp"
                 android:layout_gravity="left"
                 android:textColor="@color/black"
@@ -53,131 +52,109 @@
 
 
 
-
-            <TextView
-                android:id="@+id/encuentra_numero_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:text="De los objetos que ves. Marca un objeto que crees que puedas cargar."
-
-                android:textSize="20dp"
-                android:layout_marginTop="10dp"
-                android:textColor="#255CE6"
-                android:textStyle="bold"
-                />
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="200dp"
                 android:weightSum="6"
-                android:visibility="gone"
                 android:layout_marginTop="35dp"
-                android:layout_gravity="center"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scaleType="centerCrop"
-                    android:background="@drawable/helados"/>
+                    android:background="@drawable/decenitas"/>
 
             </LinearLayout>
+
+
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:weightSum="2"
-                android:layout_marginTop="30dp"
                 android:orientation="horizontal">
-
-
-                <RelativeLayout
-                    android:id="@+id/seleccion_segundo"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:visibility="gone"
-                    android:gravity="center">
-                    <TextView
-                        android:id="@+id/segundo"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-                        android:padding="10dp"
-                        android:background="@drawable/mochilaa"
-                        android:textSize="18dp"/>
-
-                </RelativeLayout>
-                <RelativeLayout
-                    android:id="@+id/seleccion_cuarto"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center">
-                    <TextView
-                        android:id="@+id/cuarto"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:textColor="@color/black"
-                        android:gravity="center"
-
-                        android:background="@drawable/teclado"
-                        android:textSize="18dp"/>
-
-                </RelativeLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:layout_marginTop="30dp"
-                android:orientation="horizontal">
-
-                <RelativeLayout
-                    android:id="@+id/seleccion_tercero"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:gravity="center">
-                    <TextView
-                        android:id="@+id/tercero"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:textColor="@color/black"
-                        android:padding="10dp"
-                        android:gravity="center"
-                        android:background="@drawable/sofa"
-                        android:textSize="18dp"/>
-
-                </RelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/seleccion_primero"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="250dp"
                     android:layout_weight="1"
                     android:padding="10dp"
                     android:gravity="center">
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:text="22 tiene"
+                        />
+                    <EditText
                         android:id="@+id/primero"
                         android:layout_width="match_parent"
-                        android:layout_height="150dp"
+                        android:layout_height="70dp"
                         android:textColor="@color/black"
                         android:padding="10dp"
+                        android:text="0"
                         android:gravity="center"
-                        android:background="@drawable/estante"
                         android:textSize="18dp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:layout_below="@+id/primero"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:text=" decenas"
+                        />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/seleccion_segundo"
+                    android:layout_width="100dp"
+                    android:layout_height="250dp"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:text="96 tiene"
+                        />
+                    <EditText
+                          android:id="@+id/segundo"
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:textColor="@color/black"
+                        android:padding="10dp"
+                        android:text="0"
+                        android:gravity="center"
+                        android:textSize="18dp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:layout_below="@+id/segundo"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:text=" decenas"
+                        />
 
                 </RelativeLayout>
 
 
             </LinearLayout>
+
+
 
 
         </LinearLayout>
