--- a/app/src/main/res/layout/suma.xml
+++ b/app/src/main/res/layout/suma.xml
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
-                android:text="Sumar sin llevadas, vamos tu puedes."
+                android:text="Sumar sin llevadas, vamos tú puedes."
                 android:textSize="20dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
