--- a/app/src/main/res/layout/album_card.xml
+++ b/app/src/main/res/layout/album_card.xml
@@ -6,27 +6,50 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:background="@color/white"
         android:layout_height="wrap_content"
         android:weightSum="1"
         android:padding="10dp"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/nombre_resultado"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="8dp"
-            android:gravity="left"
-            android:text="Título"
-            android:textColor="#787878"
-            android:textSize="18sp" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="8dp"
+                android:visibility="gone"
+                android:gravity="left"
+                android:text="Usuario:"
+                android:textColor="#787878"
+                android:layout_weight="1"
+                android:textSize="18sp" />
+            <TextView
+                android:id="@+id/nombre_resultado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="8dp"
+                android:gravity="left"
+                android:text="Título"
+                android:textColor="#787878"
+                android:layout_weight="1"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/nota_resultado"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="8dp"
             android:gravity="left"
@@ -34,7 +57,42 @@
             android:textColor="#787878"
             android:textSize="18sp" />
 
+        <TextView
+            android:id="@+id/motivacion_resultado"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="8dp"
+            android:gravity="left"
+            android:text="Título"
+            android:textColor="#787878"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/satisfaccion_resultado"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="8dp"
+            android:gravity="left"
+            android:text="Título"
+            android:visibility="gone"
+
+            android:textColor="#787878"
+            android:textSize="18sp" />
+
+
     </LinearLayout>
+
+    <ImageView
+        android:layout_marginTop="-80dp"
+        android:layout_marginLeft="250dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/trofeiiiiito"
+
+        />
 
 
 </LinearLayout>
