--- a/app/src/main/res/layout/fragment_encontrar_i.xml
+++ b/app/src/main/res/layout/fragment_encontrar_i.xml
@@ -35,11 +35,17 @@
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
                 android:text="Aprendiendo números"
-                android:layout_gravity="center"
-                android:textSize="26dp"
+
                 android:layout_marginTop="10dp"
-                android:textColor="#255CE6"
+
                 android:textStyle="bold"
+
+
+                android:textSize="28dp"
+                android:layout_gravity="center"
+                android:textColor="@color/black"
+
+
                 />
 
 
