--- a/app/src/main/res/layout/activity_access_relato.xml
+++ b/app/src/main/res/layout/activity_access_relato.xml
@@ -28,15 +28,16 @@
             <ImageView
                 android:layout_width="140dp"
                 android:layout_height="140dp"
-                android:src="@drawable/aa"
+                android:src="@drawable/maptim"
                 />
             <TextView
                 android:id="@+id/splash_text_spook"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Matematicas para tí"
+                android:text="Bienvenido a MatPrim"
                 android:textSize="25sp"
                 android:gravity="center"
+                android:textColor="#C85B14"
                 android:layout_marginBottom="20dp"
                 android:layout_below="@+id/image_logo_splash"/>
         </LinearLayout>
