--- a/app/src/main/res/layout/contar_i.xml
+++ b/app/src/main/res/layout/contar_i.xml
@@ -60,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="¿Cuántos dulces tiene Nicolás?"
+                android:text="¿Cuántos polos tiene Nicolás?"
                 android:textColor="#255CE6"
                 android:textStyle="bold"
                 android:textSize="20dp"
