--- a/app/src/main/res/layout/fragment_raking.xml
+++ b/app/src/main/res/layout/fragment_raking.xml
@@ -4,13 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+
     tools:context=".view.resultado.RakingFragment">
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha=".3"
+        android:background="@drawable/icons"
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
         android:id="@+id/txt"/>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultados_recycler"
         android:layout_width="match_parent"
