--- a/app/src/main/res/layout/album_card.xml
+++ b/app/src/main/res/layout/album_card.xml
@@ -3,6 +3,7 @@
     android:id="@+id/relative_item_recycler_structure_h"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:orientation="vertical">
 
     <LinearLayout
