--- a/app/src/main/res/layout/fragment_comparaciones.xml
+++ b/app/src/main/res/layout/fragment_comparaciones.xml
@@ -54,6 +54,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
             android:layout_marginTop="20dp"
+            android:background="#EEEEED"
             android:paddingRight="20dp"
             android:orientation="vertical">
 
