--- a/app/src/main/res/layout/fragment_modulo_i.xml
+++ b/app/src/main/res/layout/fragment_modulo_i.xml
@@ -10,6 +10,8 @@
         android:alpha=".3"
         android:background="@drawable/icons"
         />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,6 +30,7 @@
             android:layout_height="wrap_content"
             android:text="Hola, en este módulo veremos los siguientes ejercicios."
             android:textColor="#DA1919"
+            android:textStyle="bold"
             android:textSize="20dp"
             />
 
@@ -39,6 +42,8 @@
             android:text="Números de menor a mayor."
             android:textColor="#255CE6"
             android:textSize="20dp"
+            android:textStyle="bold"
+
             />
 
         <TextView
@@ -48,6 +53,8 @@
             android:text="Números de mayor a menor."
             android:textColor="#255CE6"
             android:textSize="20dp"
+            android:textStyle="bold"
+
             />
         <TextView
             android:layout_width="match_parent"
@@ -56,6 +63,8 @@
             android:text="Encontrando números."
             android:textColor="#255CE6"
             android:textSize="20dp"
+            android:textStyle="bold"
+
             />
         <TextView
             android:layout_width="match_parent"
@@ -64,6 +73,8 @@
             android:text="Representando números."
             android:textColor="#255CE6"
             android:textSize="20dp"
+            android:textStyle="bold"
+
             />
 
         <TextView
@@ -73,6 +84,8 @@
             android:text="Unidades y Decenas."
             android:textColor="#255CE6"
             android:textSize="20dp"
+            android:textStyle="bold"
+
             />
         <TextView
             android:layout_marginTop="15dp"
@@ -82,6 +95,8 @@
             android:text="¡Vamos, tú puedes!"
             android:textColor="#5DA118"
             android:textSize="20dp"
+            android:textStyle="bold"
+
             />
 
         <TextView
@@ -93,6 +108,8 @@
             android:text="Iniciar."
             android:textColor="#255CE6"
             android:textSize="30dp"
+            android:textStyle="bold"
+
             />
 
 
@@ -101,6 +118,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="80dp"
+            android:textStyle="bold"
+
             android:gravity="center"
             android:text="■" />
 
@@ -112,6 +131,8 @@
             android:layout_height="wrap_content"
             android:textSize="30dp"
             android:gravity="center"
+            android:textStyle="bold"
+
             android:text="Salir" />
 
 
