--- a/app/src/main/res/layout/fragment_resultado.xml
+++ b/app/src/main/res/layout/fragment_resultado.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".view.resultado.ResultadoFragment">
-
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -14,31 +13,45 @@
         android:background="@drawable/icons"
         />
 
-    <ImageView
-        android:id="@+id/cerrar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="right"
-        android:background="@drawable/com_facebook_close"/>
+        android:gravity="right"
+                >
+
+        <ImageView
+            android:id="@+id/cerrar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/com_facebook_close"/>
+
+
+
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/resultado_textual"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="300dp"
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="#35B342"
         android:textSize="35dp"
+        android:textStyle="bold"
         android:text="Eres increíble.\n¡Lo lograste!" />
 
 
     <TextView
         android:id="@+id/resultado"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="200dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="45dp"
+        android:textSize="55dp"
+        android:textStyle="bold"
         android:text="14/14" />
 
     <TextView
@@ -52,4 +65,4 @@
         android:text="ERES INCREIBLE, LOGRASTE" />
 
 
-</LinearLayout>
+</RelativeLayout>
